--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "telegraf": "^4.15.3",
     "ethers": "^6.11.1",
     "dotenv": "^16.4.5",
-    "supabase-js": "^2.39.3",
-    "canvas": "^2.11.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "jimp": "^0.22.10",
     "axios": "^1.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <19.0.0"
   }
 } 
