--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "@supabase/supabase-js": "^2.39.3",
     "jimp": "^0.22.10",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "canvas": "^2.11.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
