--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@supabase/supabase-js": "^2.39.3",
     "@uniswap/v3-core": "^1.0.1",
     "dotenv": "^16.4.1",
-    "ethers": "^6.14.4",
+    "ethers": "^6.15.0",
     "express": "^4.18.2",
     "jimp": "^0.22.10",
-    "telegraf": "^4.15.6"
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
   },
   "devDependencies": {
     "@cryptoalgebra/integral-core": "^1.2.8",
